@@ -18,7 +18,7 @@
 .\" * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 .\" * KIND, either express or implied.
 .\" *
-.\" * $Id: libcurl-errors.3,v 1.32 2008-06-06 18:40:21 bagder Exp $
+.\" * $Id: libcurl-errors.3,v 1.33 2008-06-06 20:52:32 bagder Exp $
 .\" **************************************************************************
 .\"
 .TH libcurl-errors 3 "30 Aug 2007" "libcurl 7.17.0" "libcurl errors"
@@ -214,6 +214,8 @@ return code is only returned from \fIcurl_easy_recv(3)\fP and
 \fIcurl_easy_send(3)\fP (Added in 7.18.2)
 .IP "CURLE_SSL_CRL_BADFILE (82)"
 Failed to load CRL file (Added in 7.18.3)
+.IP "CURLE_SSL_ISSUER_ERROR (83)"
+Issuer check failed (Added in 7.18.3)
 .IP "CURLE_OBSOLETE*"
 These error codes will never be returned. They used to be used in an old libcurl
 version and are currently unused.
